--- a/notebook/rand_net_distill/ppo_with_rnd.ipynb
+++ b/notebook/rand_net_distill/ppo_with_rnd.ipynb
@@ -1656,7 +1656,51 @@
       "1064 Episode in 212800 steps, reward_ex -200.00, reward_in 11.03\n",
       "1065 Episode in 213000 steps, reward_ex -200.00, reward_in 9.28\n",
       "1066 Episode in 213200 steps, reward_ex -200.00, reward_in 6.49\n",
-      "1067 Episode in 213400 steps, reward_ex -200.00, reward_in 3.92\n"
+      "1067 Episode in 213400 steps, reward_ex -200.00, reward_in 3.92\n",
+      "1068 Episode in 213600 steps, reward_ex -200.00, reward_in 3.38\n",
+      "1069 Episode in 213800 steps, reward_ex -200.00, reward_in 3.09\n",
+      "1070 Episode in 214000 steps, reward_ex -200.00, reward_in 7.54\n",
+      "1071 Episode in 214200 steps, reward_ex -200.00, reward_in 4.95\n",
+      "1072 Episode in 214400 steps, reward_ex -200.00, reward_in 2.77\n",
+      "1073 Episode in 214600 steps, reward_ex -200.00, reward_in 13.52\n",
+      "1074 Episode in 214800 steps, reward_ex -200.00, reward_in 5.48\n",
+      "1075 Episode in 215000 steps, reward_ex -200.00, reward_in 7.50\n",
+      "1076 Episode in 215200 steps, reward_ex -200.00, reward_in 3.69\n",
+      "1077 Episode in 215400 steps, reward_ex -200.00, reward_in 2.84\n",
+      "1078 Episode in 215600 steps, reward_ex -200.00, reward_in 64.85\n",
+      "1079 Episode in 215800 steps, reward_ex -200.00, reward_in 17.69\n",
+      "1080 Episode in 216000 steps, reward_ex -200.00, reward_in 4.33\n",
+      "1081 Episode in 216200 steps, reward_ex -200.00, reward_in 4.22\n",
+      "1082 Episode in 216400 steps, reward_ex -200.00, reward_in 4.81\n",
+      "1083 Episode in 216600 steps, reward_ex -200.00, reward_in 5.27\n",
+      "1084 Episode in 216800 steps, reward_ex -200.00, reward_in 23.89\n",
+      "1085 Episode in 217000 steps, reward_ex -200.00, reward_in 6.60\n",
+      "1086 Episode in 217200 steps, reward_ex -200.00, reward_in 4.61\n",
+      "1087 Episode in 217400 steps, reward_ex -200.00, reward_in 2.48\n",
+      "1088 Episode in 217600 steps, reward_ex -200.00, reward_in 3.91\n",
+      "1089 Episode in 217800 steps, reward_ex -200.00, reward_in 9.84\n",
+      "1090 Episode in 218000 steps, reward_ex -200.00, reward_in 12.58\n",
+      "1091 Episode in 218200 steps, reward_ex -200.00, reward_in 6.93\n",
+      "1092 Episode in 218400 steps, reward_ex -200.00, reward_in 4.64\n",
+      "1093 Episode in 218600 steps, reward_ex -200.00, reward_in 2.05\n",
+      "1094 Episode in 218800 steps, reward_ex -200.00, reward_in 7.02\n",
+      "1095 Episode in 219000 steps, reward_ex -200.00, reward_in 5.26\n",
+      "1096 Episode in 219200 steps, reward_ex -200.00, reward_in 113.83\n",
+      "1097 Episode in 219400 steps, reward_ex -200.00, reward_in 55.57\n",
+      "1098 Episode in 219600 steps, reward_ex -200.00, reward_in 18.11\n",
+      "1099 Episode in 219800 steps, reward_ex -200.00, reward_in 3.05\n",
+      "1100 Episode in 220000 steps, reward_ex -200.00, reward_in 42.05\n",
+      "1101 Episode in 220200 steps, reward_ex -200.00, reward_in 7.14\n",
+      "1102 Episode in 220400 steps, reward_ex -200.00, reward_in 3.88\n",
+      "1103 Episode in 220600 steps, reward_ex -200.00, reward_in 5.69\n",
+      "1104 Episode in 220800 steps, reward_ex -200.00, reward_in 3.93\n",
+      "1105 Episode in 221000 steps, reward_ex -200.00, reward_in 3.76\n",
+      "1106 Episode in 221200 steps, reward_ex -200.00, reward_in 4.20\n",
+      "1107 Episode in 221400 steps, reward_ex -200.00, reward_in 3.62\n",
+      "1108 Episode in 221600 steps, reward_ex -200.00, reward_in 7.71\n",
+      "1109 Episode in 221800 steps, reward_ex -200.00, reward_in 3.00\n",
+      "1110 Episode in 222000 steps, reward_ex -200.00, reward_in 5.41\n",
+      "1111 Episode in 222200 steps, reward_ex -200.00, reward_in 2.57\n"
      ]
     }
    ],
