--- a/notebook/rand_net_distill/ppo_with_rnd_test.ipynb
+++ b/notebook/rand_net_distill/ppo_with_rnd_test.ipynb
@@ -804,7 +804,30 @@
       "262 Episode in 50923 steps, reward_ex 500.00, reward_in 289.38\n",
       "263 Episode in 51423 steps, reward_ex 500.00, reward_in 335.13\n",
       "264 Episode in 51923 steps, reward_ex 500.00, reward_in 478.90\n",
-      "265 Episode in 52423 steps, reward_ex 500.00, reward_in 381.45\n"
+      "265 Episode in 52423 steps, reward_ex 500.00, reward_in 381.45\n",
+      "266 Episode in 52923 steps, reward_ex 500.00, reward_in 340.82\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "267 Episode in 53423 steps, reward_ex 500.00, reward_in 280.96\n",
+      "268 Episode in 53923 steps, reward_ex 500.00, reward_in 262.81\n",
+      "269 Episode in 54423 steps, reward_ex 500.00, reward_in 263.40\n",
+      "270 Episode in 54923 steps, reward_ex 500.00, reward_in 255.61\n",
+      "271 Episode in 55423 steps, reward_ex 500.00, reward_in 308.09\n",
+      "272 Episode in 55923 steps, reward_ex 500.00, reward_in 369.12\n",
+      "273 Episode in 56423 steps, reward_ex 500.00, reward_in 301.21\n",
+      "274 Episode in 56923 steps, reward_ex 500.00, reward_in 205.92\n",
+      "275 Episode in 57423 steps, reward_ex 500.00, reward_in 241.82\n",
+      "276 Episode in 57923 steps, reward_ex 500.00, reward_in 320.17\n",
+      "277 Episode in 58423 steps, reward_ex 500.00, reward_in 186.18\n",
+      "278 Episode in 58923 steps, reward_ex 500.00, reward_in 183.53\n",
+      "279 Episode in 59423 steps, reward_ex 500.00, reward_in 213.89\n",
+      "280 Episode in 59923 steps, reward_ex 500.00, reward_in 367.98\n",
+      "281 Episode in 60423 steps, reward_ex 500.00, reward_in 213.67\n",
+      "282 Episode in 60923 steps, reward_ex 500.00, reward_in 428.97\n"
      ]
     }
    ],
