--- a/notebook/rand_net_distill/ppo_with_rnd.ipynb
+++ b/notebook/rand_net_distill/ppo_with_rnd.ipynb
@@ -535,7 +535,7 @@
     },
     "id": "PnifSBJglzHh",
     "outputId": "94177345-918e-4a96-d9a8-d8aba0a4bc9a",
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1700,7 +1700,106 @@
       "1108 Episode in 221600 steps, reward_ex -200.00, reward_in 7.71\n",
       "1109 Episode in 221800 steps, reward_ex -200.00, reward_in 3.00\n",
       "1110 Episode in 222000 steps, reward_ex -200.00, reward_in 5.41\n",
-      "1111 Episode in 222200 steps, reward_ex -200.00, reward_in 2.57\n"
+      "1111 Episode in 222200 steps, reward_ex -200.00, reward_in 2.57\n",
+      "1112 Episode in 222400 steps, reward_ex -200.00, reward_in 2.45\n",
+      "1113 Episode in 222600 steps, reward_ex -200.00, reward_in 3.84\n",
+      "1114 Episode in 222800 steps, reward_ex -200.00, reward_in 3.21\n",
+      "1115 Episode in 223000 steps, reward_ex -200.00, reward_in 2.95\n",
+      "1116 Episode in 223200 steps, reward_ex -200.00, reward_in 3.49\n",
+      "1117 Episode in 223400 steps, reward_ex -200.00, reward_in 7.44\n",
+      "1118 Episode in 223600 steps, reward_ex -200.00, reward_in 10.37\n",
+      "1119 Episode in 223800 steps, reward_ex -200.00, reward_in 6.10\n",
+      "1120 Episode in 224000 steps, reward_ex -200.00, reward_in 2.63\n",
+      "1121 Episode in 224200 steps, reward_ex -200.00, reward_in 1.95\n",
+      "1122 Episode in 224400 steps, reward_ex -200.00, reward_in 3.16\n",
+      "1123 Episode in 224600 steps, reward_ex -200.00, reward_in 3.45\n",
+      "1124 Episode in 224800 steps, reward_ex -200.00, reward_in 3.85\n",
+      "1125 Episode in 225000 steps, reward_ex -200.00, reward_in 3.92\n",
+      "1126 Episode in 225200 steps, reward_ex -200.00, reward_in 4.48\n",
+      "1127 Episode in 225400 steps, reward_ex -200.00, reward_in 3.26\n",
+      "1128 Episode in 225600 steps, reward_ex -200.00, reward_in 2.35\n",
+      "1129 Episode in 225800 steps, reward_ex -200.00, reward_in 1.76\n",
+      "1130 Episode in 226000 steps, reward_ex -200.00, reward_in 128.21\n",
+      "1131 Episode in 226200 steps, reward_ex -200.00, reward_in 21.48\n",
+      "1132 Episode in 226400 steps, reward_ex -200.00, reward_in 10.37\n",
+      "1133 Episode in 226600 steps, reward_ex -200.00, reward_in 18.14\n",
+      "1134 Episode in 226800 steps, reward_ex -200.00, reward_in 4.42\n",
+      "1135 Episode in 227000 steps, reward_ex -200.00, reward_in 5.03\n",
+      "1136 Episode in 227200 steps, reward_ex -200.00, reward_in 8.55\n",
+      "1137 Episode in 227400 steps, reward_ex -200.00, reward_in 3.49\n",
+      "1138 Episode in 227600 steps, reward_ex -200.00, reward_in 2.42\n",
+      "1139 Episode in 227800 steps, reward_ex -200.00, reward_in 2.25\n",
+      "1140 Episode in 228000 steps, reward_ex -200.00, reward_in 1.82\n",
+      "1141 Episode in 228200 steps, reward_ex -200.00, reward_in 2.07\n",
+      "1142 Episode in 228400 steps, reward_ex -200.00, reward_in 8.97\n",
+      "1143 Episode in 228600 steps, reward_ex -200.00, reward_in 2.96\n",
+      "1144 Episode in 228800 steps, reward_ex -200.00, reward_in 1.60\n",
+      "1145 Episode in 229000 steps, reward_ex -200.00, reward_in 1.65\n",
+      "1146 Episode in 229200 steps, reward_ex -200.00, reward_in 3.81\n",
+      "1147 Episode in 229400 steps, reward_ex -200.00, reward_in 1.86\n",
+      "1148 Episode in 229600 steps, reward_ex -200.00, reward_in 92.53\n",
+      "1149 Episode in 229800 steps, reward_ex -200.00, reward_in 17.27\n",
+      "1150 Episode in 230000 steps, reward_ex -200.00, reward_in 23.70\n",
+      "1151 Episode in 230200 steps, reward_ex -200.00, reward_in 6.70\n",
+      "1152 Episode in 230400 steps, reward_ex -200.00, reward_in 3.14\n",
+      "1153 Episode in 230600 steps, reward_ex -200.00, reward_in 24.17\n",
+      "1154 Episode in 230800 steps, reward_ex -200.00, reward_in 6.48\n",
+      "1155 Episode in 231000 steps, reward_ex -200.00, reward_in 6.49\n",
+      "1156 Episode in 231200 steps, reward_ex -200.00, reward_in 3.61\n",
+      "1157 Episode in 231400 steps, reward_ex -200.00, reward_in 3.84\n",
+      "1158 Episode in 231600 steps, reward_ex -200.00, reward_in 2.22\n",
+      "1159 Episode in 231800 steps, reward_ex -200.00, reward_in 4.17\n",
+      "1160 Episode in 232000 steps, reward_ex -200.00, reward_in 2.48\n",
+      "1161 Episode in 232200 steps, reward_ex -200.00, reward_in 2.39\n",
+      "1162 Episode in 232400 steps, reward_ex -200.00, reward_in 4.06\n",
+      "1163 Episode in 232600 steps, reward_ex -200.00, reward_in 4.61\n",
+      "1164 Episode in 232800 steps, reward_ex -200.00, reward_in 2.31\n",
+      "1165 Episode in 233000 steps, reward_ex -200.00, reward_in 3.29\n",
+      "1166 Episode in 233200 steps, reward_ex -200.00, reward_in 2.02\n",
+      "1167 Episode in 233400 steps, reward_ex -200.00, reward_in 2.71\n",
+      "1168 Episode in 233600 steps, reward_ex -200.00, reward_in 77.76\n",
+      "1169 Episode in 233800 steps, reward_ex -200.00, reward_in 84.53\n",
+      "1170 Episode in 234000 steps, reward_ex -200.00, reward_in 12.88\n",
+      "1171 Episode in 234200 steps, reward_ex -200.00, reward_in 7.84\n",
+      "1172 Episode in 234400 steps, reward_ex -200.00, reward_in 3.51\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1173 Episode in 234600 steps, reward_ex -200.00, reward_in 3.00\n",
+      "1174 Episode in 234800 steps, reward_ex -200.00, reward_in 3.66\n",
+      "1175 Episode in 235000 steps, reward_ex -200.00, reward_in 2.89\n",
+      "1176 Episode in 235200 steps, reward_ex -200.00, reward_in 4.26\n",
+      "1177 Episode in 235400 steps, reward_ex -200.00, reward_in 1.95\n",
+      "1178 Episode in 235600 steps, reward_ex -200.00, reward_in 43.95\n",
+      "1179 Episode in 235800 steps, reward_ex -200.00, reward_in 9.82\n",
+      "1180 Episode in 236000 steps, reward_ex -200.00, reward_in 5.12\n",
+      "1181 Episode in 236200 steps, reward_ex -200.00, reward_in 6.59\n",
+      "1182 Episode in 236400 steps, reward_ex -200.00, reward_in 4.72\n",
+      "1183 Episode in 236600 steps, reward_ex -200.00, reward_in 4.27\n",
+      "1184 Episode in 236800 steps, reward_ex -200.00, reward_in 2.57\n",
+      "1185 Episode in 237000 steps, reward_ex -200.00, reward_in 10.51\n",
+      "1186 Episode in 237200 steps, reward_ex -200.00, reward_in 3.78\n",
+      "1187 Episode in 237400 steps, reward_ex -200.00, reward_in 3.35\n",
+      "1188 Episode in 237600 steps, reward_ex -200.00, reward_in 23.68\n",
+      "1189 Episode in 237800 steps, reward_ex -200.00, reward_in 15.02\n",
+      "1190 Episode in 238000 steps, reward_ex -200.00, reward_in 46.69\n",
+      "1191 Episode in 238200 steps, reward_ex -200.00, reward_in 6.26\n",
+      "1192 Episode in 238400 steps, reward_ex -200.00, reward_in 4.44\n",
+      "1193 Episode in 238600 steps, reward_ex -200.00, reward_in 5.25\n",
+      "1194 Episode in 238800 steps, reward_ex -200.00, reward_in 12.73\n",
+      "1195 Episode in 239000 steps, reward_ex -200.00, reward_in 3.85\n",
+      "1196 Episode in 239200 steps, reward_ex -200.00, reward_in 3.56\n",
+      "1197 Episode in 239400 steps, reward_ex -200.00, reward_in 2.22\n",
+      "1198 Episode in 239600 steps, reward_ex -200.00, reward_in 10.25\n",
+      "1199 Episode in 239800 steps, reward_ex -200.00, reward_in 29.17\n",
+      "1200 Episode in 240000 steps, reward_ex -200.00, reward_in 45.68\n",
+      "1201 Episode in 240200 steps, reward_ex -200.00, reward_in 9.64\n",
+      "1202 Episode in 240400 steps, reward_ex -200.00, reward_in 4.81\n",
+      "1203 Episode in 240600 steps, reward_ex -200.00, reward_in 2.76\n",
+      "1204 Episode in 240800 steps, reward_ex -200.00, reward_in 10.73\n"
      ]
     }
    ],
@@ -1767,7 +1866,7 @@
     "                print('\\n{} is sloved! {:3} Episode in {:3} steps'.format(\n",
     "                    env.spec.id, i, steps))\n",
     "                torch.save(old_net.state_dict(),\n",
-    "                           f'./test/saved_models/{env.spec.id}_ep{i}_clear_model_ppo_r.pt')\n",
+    "                           f'../test/saved_models/{env.spec.id}_ep{i}_clear_model_ppo_r.pt')\n",
     "                break\n",
     "env.close()"
    ]
