--- a/notebook/rand_net_distill/ppo_with_rnd_test.ipynb
+++ b/notebook/rand_net_distill/ppo_with_rnd_test.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -334,8 +334,8 @@
    "outputs": [],
    "source": [
     "# make an environment\n",
-    "# env = gym.make('CartPole-v0')\n",
-    "env = gym.make('CartPole-v1')\n",
+    "env = gym.make('CartPole-v0')\n",
+    "# env = gym.make('CartPole-v1')\n",
     "# env = gym.make('MountainCar-v0')\n",
     "# env = gym.make('LunarLander-v2')\n",
     "\n",
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -827,7 +827,48 @@
       "279 Episode in 59423 steps, reward_ex 500.00, reward_in 213.89\n",
       "280 Episode in 59923 steps, reward_ex 500.00, reward_in 367.98\n",
       "281 Episode in 60423 steps, reward_ex 500.00, reward_in 213.67\n",
-      "282 Episode in 60923 steps, reward_ex 500.00, reward_in 428.97\n"
+      "282 Episode in 60923 steps, reward_ex 500.00, reward_in 428.97\n",
+      "283 Episode in 61423 steps, reward_ex 500.00, reward_in 107.84\n",
+      "284 Episode in 61923 steps, reward_ex 500.00, reward_in 257.55\n",
+      "285 Episode in 62423 steps, reward_ex 500.00, reward_in 119.66\n",
+      "286 Episode in 62923 steps, reward_ex 500.00, reward_in 237.00\n",
+      "287 Episode in 63423 steps, reward_ex 500.00, reward_in 248.33\n",
+      "288 Episode in 63923 steps, reward_ex 500.00, reward_in 213.25\n",
+      "289 Episode in 64423 steps, reward_ex 500.00, reward_in 165.34\n",
+      "290 Episode in 64923 steps, reward_ex 500.00, reward_in 239.32\n",
+      "291 Episode in 65423 steps, reward_ex 500.00, reward_in 76.81\n",
+      "292 Episode in 65923 steps, reward_ex 500.00, reward_in 337.45\n",
+      "293 Episode in 66423 steps, reward_ex 500.00, reward_in 75.49\n",
+      "294 Episode in 66923 steps, reward_ex 500.00, reward_in 244.10\n",
+      "295 Episode in 67423 steps, reward_ex 500.00, reward_in 123.70\n",
+      "296 Episode in 67923 steps, reward_ex 500.00, reward_in 134.12\n",
+      "297 Episode in 68423 steps, reward_ex 500.00, reward_in 245.64\n",
+      "298 Episode in 68923 steps, reward_ex 500.00, reward_in 193.86\n",
+      "299 Episode in 69423 steps, reward_ex 500.00, reward_in 294.56\n",
+      "300 Episode in 69923 steps, reward_ex 500.00, reward_in 344.97\n",
+      "301 Episode in 70423 steps, reward_ex 500.00, reward_in 248.46\n",
+      "302 Episode in 70923 steps, reward_ex 500.00, reward_in 169.23\n",
+      "303 Episode in 71423 steps, reward_ex 500.00, reward_in 205.88\n",
+      "304 Episode in 71923 steps, reward_ex 500.00, reward_in 485.50\n",
+      "305 Episode in 72423 steps, reward_ex 500.00, reward_in 493.17\n",
+      "306 Episode in 72923 steps, reward_ex 500.00, reward_in 271.59\n",
+      "307 Episode in 73423 steps, reward_ex 500.00, reward_in 240.16\n",
+      "308 Episode in 73923 steps, reward_ex 500.00, reward_in 240.01\n",
+      "\n",
+      "CartPole-v1 is sloved! 308 Episode in 73923 steps\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './test/saved_models/CartPole-v1_ep308_clear_model_ppo_r.pt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-fa40ddc652a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     61\u001b[0m                     env.spec.id, i, steps))\n\u001b[1;32m     62\u001b[0m                 torch.save(old_net.state_dict(),\n\u001b[0;32m---> 63\u001b[0;31m                            f'./test/saved_models/{env.spec.id}_ep{i}_clear_model_ppo_r.pt')\n\u001b[0m\u001b[1;32m     64\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/torch/serialization.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(obj, f, pickle_module, pickle_protocol)\u001b[0m\n\u001b[1;32m    207\u001b[0m         \u001b[0;34m>>\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbuffer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m     \"\"\"\n\u001b[0;32m--> 209\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_with_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"wb\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0m_save\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpickle_module\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpickle_protocol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    210\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/torch/serialization.py\u001b[0m in \u001b[0;36m_with_file_like\u001b[0;34m(f, mode, body)\u001b[0m\n\u001b[1;32m    130\u001b[0m             \u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    131\u001b[0m         \u001b[0mnew_fd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 132\u001b[0;31m         \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    133\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mbody\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './test/saved_models/CartPole-v1_ep308_clear_model_ppo_r.pt'"
      ]
     }
    ],
@@ -894,7 +935,7 @@
     "                print('\\n{} is sloved! {:3} Episode in {:3} steps'.format(\n",
     "                    env.spec.id, i, steps))\n",
     "                torch.save(old_net.state_dict(),\n",
-    "                           f'./test/saved_models/{env.spec.id}_ep{i}_clear_model_ppo_r.pt')\n",
+    "                           f'../test/saved_models/{env.spec.id}_ep{i}_clear_model_ppo_r.pt')\n",
     "                break\n",
     "env.close()"
    ]
