--- a/notebook/rand_net_distill/ppo_with_rnd.ipynb
+++ b/notebook/rand_net_distill/ppo_with_rnd.ipynb
@@ -1799,7 +1799,50 @@
       "1201 Episode in 240200 steps, reward_ex -200.00, reward_in 9.64\n",
       "1202 Episode in 240400 steps, reward_ex -200.00, reward_in 4.81\n",
       "1203 Episode in 240600 steps, reward_ex -200.00, reward_in 2.76\n",
-      "1204 Episode in 240800 steps, reward_ex -200.00, reward_in 10.73\n"
+      "1204 Episode in 240800 steps, reward_ex -200.00, reward_in 10.73\n",
+      "1205 Episode in 241000 steps, reward_ex -200.00, reward_in 3.86\n",
+      "1206 Episode in 241200 steps, reward_ex -200.00, reward_in 9.67\n",
+      "1207 Episode in 241400 steps, reward_ex -200.00, reward_in 3.26\n",
+      "1208 Episode in 241600 steps, reward_ex -200.00, reward_in 15.40\n",
+      "1209 Episode in 241800 steps, reward_ex -200.00, reward_in 15.44\n",
+      "1210 Episode in 242000 steps, reward_ex -200.00, reward_in 6.88\n",
+      "1211 Episode in 242200 steps, reward_ex -200.00, reward_in 4.72\n",
+      "1212 Episode in 242400 steps, reward_ex -200.00, reward_in 6.71\n",
+      "1213 Episode in 242600 steps, reward_ex -200.00, reward_in 10.43\n",
+      "1214 Episode in 242800 steps, reward_ex -200.00, reward_in 9.10\n",
+      "1215 Episode in 243000 steps, reward_ex -200.00, reward_in 7.02\n",
+      "1216 Episode in 243200 steps, reward_ex -200.00, reward_in 5.75\n",
+      "1217 Episode in 243400 steps, reward_ex -200.00, reward_in 3.84\n",
+      "1218 Episode in 243600 steps, reward_ex -200.00, reward_in 2.81\n",
+      "1219 Episode in 243800 steps, reward_ex -200.00, reward_in 3.31\n",
+      "1220 Episode in 244000 steps, reward_ex -200.00, reward_in 16.93\n",
+      "1221 Episode in 244200 steps, reward_ex -200.00, reward_in 17.62\n",
+      "1222 Episode in 244400 steps, reward_ex -200.00, reward_in 6.07\n",
+      "1223 Episode in 244600 steps, reward_ex -200.00, reward_in 3.57\n",
+      "1224 Episode in 244800 steps, reward_ex -200.00, reward_in 5.18\n",
+      "1225 Episode in 245000 steps, reward_ex -200.00, reward_in 6.60\n",
+      "1226 Episode in 245200 steps, reward_ex -200.00, reward_in 7.92\n",
+      "1227 Episode in 245400 steps, reward_ex -200.00, reward_in 6.32\n",
+      "1228 Episode in 245600 steps, reward_ex -200.00, reward_in 13.84\n",
+      "1229 Episode in 245800 steps, reward_ex -200.00, reward_in 11.54\n",
+      "1230 Episode in 246000 steps, reward_ex -200.00, reward_in 4.32\n",
+      "1231 Episode in 246200 steps, reward_ex -200.00, reward_in 25.98\n",
+      "1232 Episode in 246400 steps, reward_ex -200.00, reward_in 8.91\n",
+      "1233 Episode in 246600 steps, reward_ex -200.00, reward_in 5.49\n",
+      "1234 Episode in 246800 steps, reward_ex -200.00, reward_in 3.79\n",
+      "1235 Episode in 247000 steps, reward_ex -200.00, reward_in 7.46\n",
+      "1236 Episode in 247200 steps, reward_ex -200.00, reward_in 3.77\n",
+      "1237 Episode in 247400 steps, reward_ex -200.00, reward_in 2.14\n",
+      "1238 Episode in 247600 steps, reward_ex -200.00, reward_in 4.17\n",
+      "1239 Episode in 247800 steps, reward_ex -200.00, reward_in 6.87\n",
+      "1240 Episode in 248000 steps, reward_ex -200.00, reward_in 10.68\n",
+      "1241 Episode in 248200 steps, reward_ex -200.00, reward_in 8.92\n",
+      "1242 Episode in 248400 steps, reward_ex -200.00, reward_in 4.29\n",
+      "1243 Episode in 248600 steps, reward_ex -200.00, reward_in 7.80\n",
+      "1244 Episode in 248800 steps, reward_ex -200.00, reward_in 5.93\n",
+      "1245 Episode in 249000 steps, reward_ex -200.00, reward_in 7.55\n",
+      "1246 Episode in 249200 steps, reward_ex -200.00, reward_in 5.27\n",
+      "1247 Episode in 249400 steps, reward_ex -200.00, reward_in 3.10\n"
      ]
     }
    ],
