--- a/notebook/soft_actor_critic.ipynb
+++ b/notebook/soft_actor_critic.ipynb
@@ -22,7 +22,8 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from torch.distributions import Categorical, Dirichlet\n",
-    "from torch.utils.data import DataLoader"
+    "from torch.utils.data import DataLoader\n",
+    "from IPython.display import clear_output"
    ]
   },
   {
@@ -222,7 +223,19 @@
     "        m = Categorical(log_p.exp())\n",
     "        action = m.sample()\n",
     "\n",
-    "    return action.item()"
+    "    return action.item()\n",
+    "\n",
+    "\n",
+    "def plot():\n",
+    "    clear_output(True)\n",
+    "    plt.figure(figsize=(16, 5))\n",
+    "    plt.subplot(121)\n",
+    "    plt.plot(ep_rewards)\n",
+    "    plt.title('Reward')\n",
+    "    plt.subplot(122)\n",
+    "    plt.plot(losses)\n",
+    "    plt.title('Loss')\n",
+    "    plt.show()"
    ]
   },
   {
@@ -712,8 +725,9 @@
     "    if done:\n",
     "        rewards.append(ep_reward)\n",
     "        reward_eval.append(ep_reward)\n",
-    "        print('{:3} Episode in {:5} steps, reward {:.2f}'.format(\n",
-    "            i, total_steps, ep_reward))\n",
+    "        plot()\n",
+    "#         print('{:3} Episode in {:5} steps, reward {:.2f}'.format(\n",
+    "#             i, total_steps, ep_reward))\n",
     "\n",
     "        if len(reward_eval) >= n_eval:\n",
     "            if np.mean(reward_eval) >= env.spec.reward_threshold:\n",
