--- a/code/ppo_discrete_step.ipynb
+++ b/code/ppo_discrete_step.ipynb
@@ -144,9 +144,11 @@
     "            s_batch = s.to(device).float()\n",
     "            a_batch = a.to(device).long()\n",
     "            ret_batch = ret.to(device).float()\n",
-    "            ret_batch = (ret_batch - ret_batch.mean()) / (ret_batch.std() + 1e-5)\n",
+    "            ret_batch = (ret_batch - ret_batch.mean()) / \\\n",
+    "                (ret_batch.std() + 1e-5)\n",
     "            adv_batch = adv.to(device).float()\n",
-    "            adv_batch = (adv_batch - adv_batch.mean()) / (adv_batch.std() + 1e-5)\n",
+    "            adv_batch = (adv_batch - adv_batch.mean()) / \\\n",
+    "                (adv_batch.std() + 1e-5)\n",
     "            with torch.no_grad():\n",
     "                log_p_batch_old, v_batch_old = old_net(s_batch)\n",
     "                log_p_acting_old = log_p_batch_old[range(BATCH_SIZE), a_batch]\n",
@@ -203,7 +205,7 @@
     "    for i, data in enumerate(roll_memory):\n",
     "        data.append(sum(dis_r[i:] / GAMMA**(i)))\n",
     "        data.append(sum(gae_dt[i:] / (GAMMA * LAMBDA)**(i)))\n",
-    "    \n",
+    "\n",
     "    rewards.clear()\n",
     "    values.clear()\n",
     "\n",
@@ -222,7 +224,7 @@
     "    plt.subplot(122)\n",
     "    plt.plot(losses, alpha=0.5)\n",
     "    plt.title(f'Loss: '\n",
-    "             f'{np.mean(list(reversed(losses))[: n_eval]).round(decimals=2)}')\n",
+    "              f'{np.mean(list(reversed(losses))[: n_eval]).round(decimals=2)}')\n",
     "    plt.show()"
    ]
   },
@@ -269,7 +271,7 @@
     "# global values\n",
     "steps = 0\n",
     "ep_rewards = []\n",
-    "reward_eval =[]\n",
+    "reward_eval = []\n",
     "is_rollout = False\n",
     "is_solved = False\n",
     "\n",
@@ -289,7 +291,7 @@
     "    done = False\n",
     "    ep_reward = 0\n",
     "    while not done:\n",
-    "#         env.render()\n",
+    "        #         env.render()\n",
     "        action, value = get_action_and_value(obs, old_net)\n",
     "        _obs, reward, done, _ = env.step(action)\n",
     "\n",
@@ -327,7 +329,7 @@
     "\n",
     "        if len(ep_rewards) >= n_eval:\n",
     "            if reward_eval[-1] >= env.spec.reward_threshold:\n",
-    "#             if reward_eval[-1] >= 495:\n",
+    "                #             if reward_eval[-1] >= 495:\n",
     "                print('\\n{} is sloved! {:3} Episode in {:3} steps'.format(\n",
     "                    env.spec.id, i, steps))\n",
     "                torch.save(net.state_dict(),\n",
