--- a/src/PPO.ipynb
+++ b/src/PPO.ipynb
@@ -76,10 +76,10 @@
     "    plt.title(f\"Reward: {eval_ret_buf[-1]:.0f}\")\n",
     "    plt.subplot(132)\n",
     "    plt.plot(loss_buf['pi'], alpha=0.5)\n",
-    "    plt.title(f\"Pi_Loss: {np.mean(loss_buf['pi'][:-10:]):.3f}\")\n",
+    "    plt.title(f\"Pi_Loss: {np.mean(loss_buf['pi'][:-20:]):.3f}\")\n",
     "    plt.subplot(133)\n",
     "    plt.plot(loss_buf['vf'], alpha=0.5)\n",
-    "    plt.title(f\"Vf_Loss: {np.mean(loss_buf['vf'][-10:]):.2f}\")\n",
+    "    plt.title(f\"Vf_Loss: {np.mean(loss_buf['vf'][-20:]):.2f}\")\n",
     "    plt.show()"
    ]
   },
@@ -147,28 +147,28 @@
     "    actor_critic=core.MLPActorCritic\n",
     "    hidden_size = 64\n",
     "    activation = torch.nn.Tanh\n",
-    "    seed=5\n",
-    "    steps_per_epoch=2048\n",
-    "    epochs=1000\n",
-    "    gamma=0.999\n",
-    "    lam=0.97\n",
-    "    clip_ratio=0.2\n",
-    "    pi_lr=3e-4\n",
-    "    vf_lr=1e-3\n",
-    "    train_pi_iters=80\n",
-    "    train_vf_iters=80\n",
-    "    max_ep_len=1000\n",
-    "    target_kl=0.01\n",
-    "    save_freq=10\n",
+    "    seed = 5\n",
+    "    steps_per_epoch = 4096\n",
+    "    epochs = 1000\n",
+    "    gamma = 0.99\n",
+    "    lam = 0.97\n",
+    "    clip_ratio = 0.2\n",
+    "    pi_lr = 3e-4\n",
+    "    vf_lr = 1e-3\n",
+    "    train_pi_iters = 80\n",
+    "    train_vf_iters = 80\n",
+    "    max_ep_len = 1000\n",
+    "    target_kl = 0.01\n",
+    "    save_freq = 10\n",
     "    obs_norm = True\n",
-    "    view_curve = False\n",
+    "    view_curve = True\n",
     "\n",
     "    # make an environment\n",
     "#     env = gym.make('CartPole-v0')\n",
     "#     env = gym.make('CartPole-v1')\n",
     "#     env = gym.make('MountainCar-v0')\n",
-    "    env = gym.make('LunarLander-v2')\n",
-    "#     env = gym.make('BipedalWalker-v3')\n",
+    "#     env = gym.make('LunarLander-v2')\n",
+    "    env = gym.make('BipedalWalker-v3')\n",
     "    print(f\"reward_threshold: {env.spec.reward_threshold}\")\n",
     "\n",
     "    obs_dim = env.observation_space.shape\n",
@@ -243,7 +243,7 @@
     "                buf.finish_path(v)\n",
     "                if terminal:\n",
     "                    ep_ret_buf.append(ep_ret)\n",
-    "                    eval_ret_buf.append(np.mean(ep_ret_buf[-100:]))\n",
+    "                    eval_ret_buf.append(np.mean(ep_ret_buf[-20:]))\n",
     "                    ep_num += 1\n",
     "                    if view_curve:\n",
     "                        plot(ep_ret_buf, eval_ret_buf, loss_buf)\n",
