--- a/src/ppo_discrete_step_test.ipynb
+++ b/src/ppo_discrete_step_test.ipynb
@@ -376,12 +376,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook PPO.ipynb to script\n",
+      "[NbConvertApp] Writing 8573 bytes to PPO.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !jupyter nbconvert --to script PPO.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# !jupyter nbconvert --to script ppo_discrete_step_test.ipynb"
-   ]
+   "source": []
   }
  ],
  "metadata": {
